--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://gitlab.com/cxss/awgit#readme",
   "dependencies": {
+    "firebase": "^8.2.1",
     "node": "^15.4.0"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/node": "^13.9.0",
     "@types/winston": "^2.4.4",
     "@vercel/node": "^1.8.5",
