--- a/collector/package.json
+++ b/collector/package.json
@@ -27,6 +27,8 @@
     "firebase": "^8.2.1",
     "node": "^15.4.0",
     "node-notifier": "^9.0.0",
+    "openpgp": "^4.10.9",
+    "pgp-utils": "^0.0.35",
     "winston": "^3.3.3"
   },
   "devDependencies": {
