--- a/collector/package.json
+++ b/collector/package.json
@@ -28,6 +28,7 @@
     "node": "^15.4.0",
     "node-notifier": "^9.0.0",
     "openpgp": "^4.10.9",
+    "parse-link-header": "^1.0.1",
     "pgp-utils": "^0.0.35",
     "winston": "^3.3.3"
   },
